--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -5,41 +5,41 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>blender: buttons</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body>
         <nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
         <h1>buttons</h1>
         <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
         <p>One with cubes walking:</p>
-        <img src="blender/buttons/walking.gif" alt="walking">
+        <img src="/website/blender/buttons/walking.gif" alt="walking">
         <p>Two having fun with shadows and things:</p>
-        <img src="blender/buttons/shadow.gif" alt="shadow"><img src="blender/buttons/what.gif" alt="what">
+        <img src="/website/blender/buttons/shadow.gif" alt="shadow"><img src="/website/blender/buttons/what.gif" alt="what">
         <p>And two others with a spinning color ring:</p>
-        <img src="blender/buttons/colorring1.gif" alt="colorring1"><img src="blender/buttons/colorring2.gif" alt="colorring2">
+        <img src="/website/blender/buttons/colorring1.gif" alt="colorring1"><img src="/website/blender/buttons/colorring2.gif" alt="colorring2">
         <p>There was another one exploring shadows, but because of the speed and low resolution, it didn't turn out very good:</p>
-        <img src="blender/buttons/waves.gif" alt="waves">
+        <img src="/website/blender/buttons/waves.gif" alt="waves">
         <p>But at least I got some nice still renders.</p>
-        <img src="blender/buttons/sticks1.png" alt="sticks1" width="500px">
-        <img src="blender/buttons/sticks2.png" alt="sticks2" width="500px">
-        <img src="blender/buttons/walking.png" alt="walking" width="500px">
-        <img src="blender/buttons/grid.png" alt="grid" width="500px">
+        <img src="/website/blender/buttons/sticks1.png" alt="sticks1" width="500px">
+        <img src="/website/blender/buttons/sticks2.png" alt="sticks2" width="500px">
+        <img src="/website/blender/buttons/walking.png" alt="walking" width="500px">
+        <img src="/website/blender/buttons/grid.png" alt="grid" width="500px">
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
         <p>Edit: i did!!</p>
-        <img src="blender/buttons/carpediem.gif" alt="carpediem">
+        <img src="/website/blender/buttons/carpediem.gif" alt="carpediem">
     </div></body>
