--- a/buttons.html
+++ b/buttons.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>buttons</title>
-        <link href="styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-color: #b8cadf;}
         nav{background-color: #7ba0cc; border-color: #475464}
@@ -16,17 +16,17 @@
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
-        <a href="about">about</a><br>
-        <a href="musicians">musicians</a><br>
-        <a href="websites">websites</a><br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
         <br>
-        <a href="words">words</a><br>
-        <a href="blender">blender</a><br>
-        <a href="doodles">doodles</a><br>
-        <a href="misc">misc</a><br>
+        <a href="/website/words">words</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/doodles">doodles</a><br>
+        <a href="/website/misc">misc</a><br>
         <br>
-        <a href="buttons">buttons</a><br>
-        <a href="sitelog">sitelog</a><br>
+        <a href="/website/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
     <h1>buttons</h1>
@@ -46,5 +46,5 @@
     <a href="https://nyanseong.neocities.org/" class="button"><img width="88" height="31" src="https://nyanseong.neocities.org/img/buttons/nyanseong-wink.png"></a>
     <a href="https://noodledesk.net/" class="button"><img src="https://noodledesk.net/index_images/noodlebutton.gif" alt="noodle desk"></a>
     <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"></a>
-    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
+    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </div></body>
