--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -4,9 +4,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>ruler and compass</title>
-        <link href="styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(doodles/background.jpg);
+        body{background-image:url(/website/doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             background-attachment: fixed;}
@@ -24,24 +24,24 @@
         <nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
-        <img src="doodles/racheader.gif" alt="ruler and compass" style="height:120px; margin-bottom:20px" class="header"><br>
+        <img src="/website/doodles/racheader.gif" alt="ruler and compass" style="height:120px; margin-bottom:20px" class="header"><br>
         <p>This used to be the thing i did the most since, maybe the start of 2021, and i have a big bunch of geometrical things, i PROMISE this won't be this empty forever</p>
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="doodles/rac/arrow.jpg" alt="arrow" style="width:100%;">
-        <img src="doodles/rac/mun_suno.jpg" alt="mun suno" style="width:100%;">
+        <img src="/website/doodles/rac/arrow.jpg" alt="arrow" style="width:100%;">
+        <img src="/website/doodles/rac/mun_suno.jpg" alt="mun suno" style="width:100%;">
 
         </div>
     </body>
