--- a/words.html
+++ b/words.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>nimi mute</title>
-        <link href="styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         summary{font-size: x-large}
         </style> 
@@ -11,34 +11,34 @@
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
         <h1>words</h1>
         <details><summary><a>texts in english</a></summary>
         <ul>
-            <li><a href="words/let-you-out">let you out</a></li>
-            <li><a href="words/these-two">these two</a></li>
+            <li><a href="/website/words/let-you-out">let you out</a></li>
+            <li><a href="/website/words/these-two">these two</a></li>
         </ul>
         </details>
         <details><summary><a>texts in toki pona (nimi mute pi toki pona)</a></summary>
         <ul>
-            <li><a href="words/sona-pini">sona pini (nimi 124)</a></li>
-            <li><a href="words/ona">ona (nimi 41)</a></li>
-            <li><a href="words/tomo-ni">tomo ni (nimi 115)</a></li>
-            <li><a href="words/suno">suno (nimi 218)</a></li>
-            <li><a href="words/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
-            <li><a href="words/jan">jan (nimi 332)</a></li>
-            <li><a href="words/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
+            <li><a href="/website/words/sona-pini">sona pini (nimi 124)</a></li>
+            <li><a href="/website/words/ona">ona (nimi 41)</a></li>
+            <li><a href="/website/words/tomo-ni">tomo ni (nimi 115)</a></li>
+            <li><a href="/website/words/suno">suno (nimi 218)</a></li>
+            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
+            <li><a href="/website/words/jan">jan (nimi 332)</a></li>
+            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
         </ul></details>
     </div></body>
