--- a/blender.html
+++ b/blender.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>blender</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
 
         .pyramid{
@@ -18,33 +18,33 @@
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
         <h1>some things made in blender</h1>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. (i should make colorful things more often...) These are a bunch of them.
-            <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="LICENSE.txt">GPLv3</a>.
+            <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li><a href="blender/pyramids" class="pyramid">pyramids (4)</a></li>
-            <li><a href="blender/buttons">buttons (7)</a></li>
-            <li><a href="blender/cmyk">cmyk (5)</a></li></ul>
+            <li><a href="/website/blender/pyramids" class="pyramid">pyramids (4)</a></li>
+            <li><a href="/website/blender/buttons">buttons (7)</a></li>
+            <li><a href="/website/blender/cmyk">cmyk (5)</a></li></ul>
         <br>
-        <img src="blender/ampersand.png" alt="ampersand" width="500px">
-        <img src="blender/angle2.png" alt="angle2" width="500px">
-        <img src="blender/arrow2.png" alt="arrow2" width="500px">
-        <img src="blender/cloud.png" alt="cloud" width="500px">
-        <img src="blender/cuberootof2.png" alt="cuberootof2" width="500px">
-        <img src="blender/idk2.png" alt="idk2" width="500px">
-        <img src="blender/lines.png" alt="lines" width="500px">
+        <img src="/website/blender/ampersand.png" alt="ampersand" width="500px">
+        <img src="/website/blender/angle2.png" alt="angle2" width="500px">
+        <img src="/website/blender/arrow2.png" alt="arrow2" width="500px">
+        <img src="/website/blender/cloud.png" alt="cloud" width="500px">
+        <img src="/website/blender/cuberootof2.png" alt="cuberootof2" width="500px">
+        <img src="/website/blender/idk2.png" alt="idk2" width="500px">
+        <img src="/website/blender/lines.png" alt="lines" width="500px">
     </div></body>
