--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -5,22 +5,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">    
         <meta charset="UTF-8">
         <title>difference</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
 
@@ -38,6 +38,6 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.
-            <br><br><a href="misc/folder">go back</a></p>
+            <br><br><a href="/website/misc/folder">go back</a></p>
         </div>
     </body>
