--- a/websites.html
+++ b/websites.html
@@ -5,30 +5,30 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="about">about</a><br>
-            <a href="musicians">musicians</a><br>
-            <a href="websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="words">words</a><br>
-            <a href="blender">blender</a><br>
-            <a href="doodles">doodles</a><br>
-            <a href="misc">misc</a><br>
+            <a href="/website/words">words</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="buttons">buttons</a><br>
-            <a href="sitelog">sitelog</a><br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
         <h1>cool websites</h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
-        <h2>→ <a href="websites/math">math and physics (15)</a></h2>
-        <h2>→ <a href="websites/lang">language (5)</a></h2>
-        <h2>→ <a href="websites/geo">geography and flags (4)</a></h2>
-        <h2>→ <a href="websites/misc">miscellaneously interesting (11)</a></h2>
+        <h2>→ <a href="/website/websites/math">math and physics (15)</a></h2>
+        <h2>→ <a href="/website/websites/lang">language (5)</a></h2>
+        <h2>→ <a href="/website/websites/geo">geography and flags (4)</a></h2>
+        <h2>→ <a href="/website/websites/misc">miscellaneously interesting (11)</a></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
     </div></body>
