--- a/sitelog.html
+++ b/sitelog.html
@@ -36,6 +36,9 @@
         <h1>sitelog</h1>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>28/9/2022 21:36</h2>
+        <p>I changed nimi mute to <a href="/website/words">words</a> now that there are a couple english things there!</p>
+    </div><div id="entry">
         <h2>26/9/2022 17:50</h2>
         <p>I wanted to change the layout a tad, and now it's finally done! Yayyyy</p>
     </div><div id="entry">
