added word count because i'm a dingus

--- a/words.html
+++ b/words.html
@@ -27,8 +27,8 @@
         <h1>words</h1>
         <details><summary><a>texts in english</a></summary>
         <ul>
-            <li><a href="/website/words/let-you-out">let you out</a></li>
-            <li><a href="/website/words/these-two">these two</a></li>
+            <li><a href="/website/words/let-you-out">let you out (73 words)</a></li>
+            <li><a href="/website/words/these-two">these two (62 words)</a></li>
         </ul>
         </details>
         <details><summary><a>texts in toki pona (nimi mute pi toki pona)</a></summary>
