--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -31,6 +31,7 @@
         <div>I don't know if adding that guestbook was a good idea</div>
         <div>It feels cozy down here.</div>
         <div>Thoughts are nice, calm and collected.</div>
+        <div>We absolutely mustn't tolerate behaviour like such from such an... IGGGNOMINNNNNIOUS INDIVVVVIDUALL!!</div>
         <div>i feel small :/</div>
         <div>Who cares about the future if i can't feel good today</div>
         <div>B I G   S P O O N</div>
