--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -48,5 +48,9 @@
         <img src="/website/doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
         <img src="/website/doodles/etc/new.jpg" alt="new" style="width:100%;">
         <img src="/website/doodles/etc/new2.jpg" alt="new2" style="width:100%;">
+        <img src="/website/doodles/etc/new3.jpg" alt="new3" style="width:100%;">
+        <img src="/website/doodles/etc/creature.jpg" alt="creature" style="width:100%;">
+        <img src="/website/doodles/etc/creature2.jpg" alt="creature2" style="width:100%;">
+        <img src="/website/doodles/etc/square.jpg" alt="square" style="width:100%;">
         </div>
     </body>
