--- a/doodles/ruler_and_compass.html
+++ b/doodles/ruler_and_compass.html
@@ -42,6 +42,9 @@
         <div id="drawings" style="width:650px; margin-top:20px">
         <img src="/website/doodles/rac/arrow.jpg" alt="arrow" style="width:100%;">
         <img src="/website/doodles/rac/mun_suno.jpg" alt="mun suno" style="width:100%;">
+        <img src="/website/doodles/rac/3.jpg" alt="3" style="width:100%;">
+        <img src="/website/doodles/rac/hyperbolic-attempt.jpg" alt="hyperbolic attempt" style="width:100%;">
+        <img src="/website/doodles/rac/penrose.jpg" alt="penrose" style="width:100%;">
 
         </div>
     </body>
