--- a/sitelog.html
+++ b/sitelog.html
@@ -36,6 +36,9 @@
         <h1>sitelog</h1>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>1/10/2022 16:13</h2>
+        <p>New <a href="/website/doodles">doodles</a>! Also, happy october!</p>
+    </div><div id="entry">
         <h2>28/9/2022 21:36</h2>
         <p>I changed nimi mute to <a href="/website/words">words</a> now that there are a couple english things there!</p>
     </div><div id="entry">
