--- a/doodles/people.html
+++ b/doodles/people.html
@@ -47,5 +47,7 @@
         <img src="/website/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
         <img src="/website/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
         <img src="/website/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
+        <img src="/website/doodles/people/eh.jpg" alt="eh" style="width:100%;">
+        <img src="/website/doodles/people/really.jpg" alt="really" style="width:100%;">
         </div>
     </body>
