--- a/sitelognew.html
+++ b/sitelognew.html
@@ -8,6 +8,7 @@
             #statuscafe{margin-top: 20px; margin-bottom: 30px}
             #entry{padding-left: 8px; margin-bottom: 40px}
             h2{font-size: large}
+            h2::before{content:"> "; color: #a87000}
             #entry h2{margin-bottom: 7px}
             #entry p{margin-top: 7px}
         </style></head>
