--- a/sitelog.html
+++ b/sitelog.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>sitelog</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .pyramid{
-                background-color: #000429; 
-                color:#ddba39}
-            .pyramid:hover{text-decoration-color: #ddba39}
+        <link href="/website/styles/logstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             #statuscafe{margin-top: 20px; margin-bottom: 30px}
-            #entry{border-left: solid #808080 3px; padding-left: 8px; margin-bottom: 20px}
+            #entry{padding-left: 8px; margin-bottom: 40px}
             h2{font-size: large}
+            h2::before{content:"> "; color: #a87000}
             #entry h2{margin-bottom: 7px}
             #entry p{margin-top: 7px}
         </style></head>
@@ -37,7 +33,7 @@
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
         <h2>1/10/2022 16:13</h2>
-        <p>New <a href="/website/doodles">doodles</a>! Also, happy october!</p>
+        <p>New <a href="/website/doodles">doodles</a>! Also, happy october! Also I changed the theme for this log to amber and it looks AWESOME!!!!</p>
     </div><div id="entry">
         <h2>28/9/2022 21:36</h2>
         <p>I changed nimi mute to <a href="/website/words">words</a> now that there are a couple english things there!</p>
