--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -14,10 +15,13 @@
             margin:0px;}
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
-            a.misc, a.i{font-style: italic;}
+            a.misc, a.i, a.log{font-style: italic;}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
+            a.log:hover{color: #ffa900;
+            text-decoration-color: #ffa900;}
             .i{font-family: 'Libre Baskerville', serif}
+            .log{font-family: 'IBM Plex Mono', sans-serif}
         </style></head>
 
     <body>
@@ -43,7 +47,7 @@
         <br>
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-        <a href="/website/sitelog">sitelog</a> changes to the site
+        <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
     </div>
     </div>
     </body>
