--- a/misc/folder/color.html
+++ b/misc/folder/color.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title>WHAT IS IT</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            *{font-family: 'Libre Franklin', sans-serif;
+            body{font-family: 'Libre Franklin', sans-serif;
         background-color: #00c57a;}
             p{max-width: 775px}
         </style></head>
