--- a/misc/folder/color.html
+++ b/misc/folder/color.html
@@ -7,7 +7,7 @@
         <title>WHAT IS IT</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{font-family: 'Libre Franklin', sans-serif;
-        background-color: #00c57a;}
+        background-color: #00c57a; padding-left: 50px}
             p{max-width: 775px}
         </style></head>
 
