--- a/sitelog.html
+++ b/sitelog.html
@@ -32,6 +32,9 @@
         <h1>sitelog</h1>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>6/10/2022 16:50</h2>
+        <p>Greatly enbiggened the <a href="/website/musicians">musicians</a> page, now with bigger and better (hopefully) descriptions! Also i kinda wanna remake this site a bit!</p>
+    </div><div id="entry">
         <h2>1/10/2022 16:13</h2>
         <p>New <a href="/website/doodles">doodles</a>! Also, happy october! Also I changed the theme for this log to amber and it looks AWESOME!!!!</p>
     </div><div id="entry">
