--- a/musicians.html
+++ b/musicians.html
@@ -5,7 +5,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>musicians</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            il{margin: 20px 0}
+        </style></head>
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
@@ -39,7 +41,7 @@
             <li><a href="https://zelmastone.bandcamp.com/" class="bandcamp">
                 Zelma Stone</a>: The thing that was originally here was "delightful bedroom pop". I can't really find a better descriptor. A good place to start is <a href="https://zelmastone.bandcamp.com/album/dreamland" class="bandcamp">Dreamland</a>.<br></li>
             <li><a href="https://xahoy.bandcamp.com/" class="bandcamp">
-                Ahoy/Stuart Brown</a>: He makes <a href="https://www.youtube.com/user/XboxAhoy">videogame documentaries</a> on Youtube, as well as all the background music for them! I recommend listening to the bgms to <a href="https://xahoy.bandcamp.com/album/the-first-video-game" class="bandcamp">The First Video Game</a> and <a href="https://xahoy.bandcamp.com/album/big-box-ep" class="bandcamp">The Big Box</a>.<br></li>
+                Ahoy/Stuart Brown</a>: He makes <a href="https://www.youtube.com/user/XboxAhoy">videogame documentaries</a> on Youtube, as well as all the background music for them! I recommend listening to the bgms to <a href="https://xahoy.bandcamp.com/album/the-first-video-game" class="bandcamp">The First Video Game</a> and <a href="https://xahoy.bandcamp.com/album/big-box-ep" class="bandcamp">Big Boxes</a>.<br></li>
             <li><a href="https://posy.bandcamp.com/" class="bandcamp">
                 Posy</a>: Like Ahoy, he also makes <a href="https://www.youtube.com/c/PosyMusic">great Youtube videos about everything and nothing</a> and the music that goes alongside them. Good tracks on <a href="https://posy.bandcamp.com/album/way-back-ii" class="bandcamp">Way Back II</a> and <a href="https://posy.bandcamp.com/album/segmented-segments" class="bandcamp">Segmented Segments</a>.<br></li>
             <li><a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotify">
