--- a/musicians.html
+++ b/musicians.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title>musicians</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            il{margin: 20px 0}
+            #list li{margin: 20px 0}
         </style></head>
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
@@ -25,7 +25,7 @@
         </div></nav>
         <div class="main"><h1>favorite musicians</h1>
         <p>These are some musicians who i listen/listened to a lot. I recommend checking them out! (<a class="bandcamp">blue links</a> lead to bandcamp and <a class="spotify">green links</a> lead to spotify)</p>
-        <ul>
+        <ul id="list">
             <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
                 Radiohead</a>: They've been making music since the 90s, mostly rock at first but their stuff is super varied with each album.
                 I recommend <a href="https://radiohead.bandcamp.com/album/ok-computer" class="bandcamp">OK Computer</a> and <a href="https://radiohead.bandcamp.com/album/kid-a">Kid A</a>, as well as the <a href="https://www.radiohead.com/library">Radiohead Public Library</a> for everything they've made since their start. Almost.<br></li>
