--- a/musicians.html
+++ b/musicians.html
@@ -24,7 +24,7 @@
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main"><h1>favorite musicians</h1>
-        <p>These are some musicians who i listen/listened to a lot. I recommend checking them out! (<a class="bandcamp">blue links</a> lead to bandcamp and <a class="spotify">green links</a> lead to spotify)</p>
+        <p>These are some musicians who i listen/listened to a lot. I recommend checking them out! (<a class="bandcamp" style="text-decoration:underline">blue links</a> lead to bandcamp and <a class="spotify" style="text-decoration:underline">green links</a> lead to spotify)</p>
         <ul id="list">
             <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
                 Radiohead</a>: They've been making music since the 90s, mostly rock at first but their stuff is super varied with each album.
