--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -33,6 +33,7 @@
         <div>Thoughts are nice, calm and collected.</div>
         <div>We absolutely mustn't tolerate behaviour like such from such an... IGGGNOMINNNNNIOUS INDIVVVVIDUALL!!</div>
         <div>i feel small :/</div>
+        <div>Why am i never satisfied</div>
         <div>Who cares about the future if i can't feel good today</div>
         <div>B I G   S P O O N</div>
         <div>A boat in the middle of nowhere, a non-euclidean midnight train and an empty office building.</div>
