--- a/indexnew.html
+++ b/indexnew.html
@@ -6,10 +6,12 @@
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
-            grid-template-columns: 20% 60% 20%}
+            grid-template-columns: 20% 60% 20%; width: 100%}
             body{min-height:100vh;
             margin:0px;}
-            .container{width: 100%; padding: 15px; background: #202020; border: solid 2px #f0f0f0}
+            .container{width: 100%; padding: 15px; background: #202020; border: solid 2px #f0f0f0;
+            text-align: center;}
+            h1{margin: 0}
         </style></head>
 
     <body>
