--- a/indexnew.html
+++ b/indexnew.html
@@ -11,7 +11,7 @@
             margin:0px;}
             .container{width: 100%; padding: 15px; background: #202020; border: solid 2px #f0f0f0;
             text-align: center;}
-            h1{margin: 0}
+            h1{margin: 0; text-shadow: none;}
         </style></head>
 
     <body>
