--- a/indexnew.html
+++ b/indexnew.html
@@ -16,11 +16,15 @@
 
     <body>
     <div class="all">
-        <div></div>
+        <div><h1>cvni81</h1></div>
 
-        <div>
-            <div class="container"><h1>cvni81</h1></div>
-        </div>
+        <div><div class="container">
+            <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
+                Making this website has been really fun, and i hope you like having a gander at it.<br>
+                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+                Also: they/them, pt-br, en, tok, <18yo</p>
+                <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+        </div></div>
 
         <div></div>
     </div>
