--- a/indexnew.html
+++ b/indexnew.html
@@ -6,24 +6,25 @@
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
-            grid-template-columns: 20% 60% 20%; width: 100%}
+            grid-template-columns: 20% 60% 20%; width: 100%; gap: 30px; padding: 20px}
             body{min-height:100vh;
             margin:0px;}
-            .container{width: 100%; padding: 15px; background: #202020; border: solid 2px #f0f0f0;
+            .container{width: 100%; background: #202020; border: solid 2px #f0f0f0;
             text-align: center;}
             h1{margin: 0; text-shadow: none;}
+            p{max-width: max-content;}
         </style></head>
 
     <body>
     <div class="all">
-        <div><h1>cvni81</h1></div>
+        <div><h1 >cvni81</h1></div>
 
         <div><div class="container">
-            <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-                Making this website has been really fun, and i hope you like having a gander at it.<br>
-                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+            <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!
+                Making this website has been really fun, and i hope you like having a gander at it.
+                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess. Make yourself at home!
                 Also: they/them, pt-br, en, tok, <18yo</p>
-                <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+                <p><b>discord</b>: @cvni81#4837 - <b>email</b>: cvni81@gmail.com</p>
         </div></div>
 
         <div></div>
